--- a/roles/common/tasks/custom-settings.yml
+++ b/roles/common/tasks/custom-settings.yml
@@ -2,7 +2,6 @@
 
 # Set local timezone
 #-------------------
-
 - name: Set timezone to CEST 
   timezone:
     name: Europe/Amsterdam
@@ -12,7 +11,6 @@
 
 # Install OS utilities
 #---------------------
-
 - name: Install dnsutils package
   apt:
     name: dnsutils
@@ -36,7 +34,6 @@
 
 # Remove OS utilities
 #--------------------
-
 - name: Remove wolfram-engine package
   apt:
     name: wolfram-engine
@@ -47,8 +44,17 @@
 
 # Run apt update cache
 #---------------------
-
 - name: Only run "update_cache=yes" if the last one is more than 3600 seconds ago
   apt:
     update_cache: yes
     cache_valid_time: 3600
+
+
+# Set log rotation of ansible.log file
+#-------------------------------------
+- name: "Set log rotation of playbook exec log"
+  copy:
+    src: ansible 
+    dest: /etc/logrotate.d 
+  notify:
+    - run logrotate
