Added locate package to install list

--- a/group_vars/docker-nodes.yml
+++ b/group_vars/docker-nodes.yml
@@ -19,6 +19,7 @@ apt_packages_to_install:
   - git
   - tree
   - tightvncserver
+  - locate
 
 # OS packages to uninstall
 #-------------------------
