Add dos2unix package

--- a/group_vars/docker-nodes.yml
+++ b/group_vars/docker-nodes.yml
@@ -20,6 +20,7 @@ apt_packages_to_install:
   - tree
   - tightvncserver
   - locate
+  - dos2unix
 
 # OS packages to uninstall
 #-------------------------
