--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,10 @@ python: "2.7"
 env:
 
   - ANSIBLE_VERSION=latest
-  - ANSIBLE_VERSION=2.2.2.0
-  - ANSIBLE_VERSION=2.1.5
-  - ANSIBLE_VERSION=2.0.0.2
-
 
 before_install:
   - sudo apt-get update -qq
-  - sudo adduser pi
+  - sudo adduser -p test123 pi
 
 
 
