--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ script:
   # Run the ansible-playbook to check 'common' ROLE
   - ansible-playbook custom-setup.yml --connection=local -v
 
+  # Run add apt_key before checking the 'nodejs' role
+  - ansible local -m apt_key -a "url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key state=present" -i hosts --connection=local --become
   # Run the ansible-playbook to check 'nodejs' ROLE
   - ansible-playbook nodejs-setup.yml --connection=local -v
 
