--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
   - ansible-playbook docker-setup.yml --syntax-check    
 
   # Run the ansible-playbook to check 'common' ROLE
-  - ansible-playbook custom-setup.yml --connection=local -v
+  - ansible-playbook custom-setup.yml --skip-tags "apt_update_cache" --connection=local -v
 
   # Run add apt_key before checking the 'nodejs' role
   #- ansible local -m apt_key -a "url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key state=present" -i hosts --connection=local --become
