--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
 before_install:
   - sudo apt-get update -qq
   - sudo docker pull resin/rpi-raspbian
-  - sudo docker run -dit --name raspbianStage resin/rpi-raspbian
+  - sudo docker run -d --name raspbianStage resin/rpi-raspbian tail -f /dev/null
   - sudo docker ps -a
   - sudo docker exec -it raspbianStage apt-get install git ansible -y
   - sudo docker exec -it raspbianStage git --version; ansible --version
