--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,4 @@ services:
 
 
 before_install:
-  - sudo apt-get update -qq
-  - sudo docker pull saptadip/raspbian_base
-  - sudo docker run saptadip/raspbian_base /bin/bash -c "git clone https://github.com/saptadip/ansible.git /tmp/testRepo && ansible-playbook /tmp/testRepo/custom-setup.yml --syntax-check"
+  - sudo docker build -t rpi_ansible_role_test .
