--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ services:
 
 
 before_install:
-  - sudo docker build -t rpi_ansible_role_test .
+  - sudo docker pull williamyeh/ansible
+  - sudo docker run -dt williamyeh/ansible /bin/bash git clone https://github.com/saptadip/ansible.git /tmp/testRepo && cd /tmp/testRepo && /tmp/ansible/bin/ansible-playbook custom-setup.yml --syntax-check
