--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ services:
 
 
 before_install:
-  - sudo docker pull williamyeh/ansible
-  - sudo docker run -dt williamyeh/ansible /bin/bash git clone https://github.com/saptadip/ansible.git /tmp/testRepo && cd /tmp/testRepo && /tmp/ansible/bin/ansible-playbook custom-setup.yml --syntax-check
+  - sudo docker pull williamyeh/ansible:debian8
+  - sudo docker run -dt williamyeh/ansible:debian8 /bin/bash git clone https://github.com/saptadip/ansible.git /tmp/testRepo && cd /tmp/testRepo && /tmp/ansible/bin/ansible-playbook custom-setup.yml --syntax-check
